--- a/param/base_local_planner_params.yaml
+++ b/param/base_local_planner_params.yaml
@@ -1,8 +1,8 @@
 TrajectoryPlannerROS:
 
 # Robot Configuration Parameters
-  max_vel_x: 0.6 #1.0 #0.8 #0.6 #0.8 #0.3
-  min_vel_x: 0.3 #0.7 #0.5 #0.3 #0.5 #0.1
+  max_vel_x: 0.8 #0.6 #1.0 #0.8 #0.6 #0.8 #0.3
+  min_vel_x: 0.5 #0.3 #0.7 #0.5 #0.3 #0.5 #0.1
 
   max_vel_theta: 0.6 # 1.0
   min_vel_theta: -0.6 #-1.0
@@ -11,13 +11,15 @@ TrajectoryPlannerROS:
   acc_lim_x: 0.5
   acc_lim_theta: 0.7 #1.0
 
+  escape_vel: 0.05
+
 # Goal Tolerance Parameters
   yaw_goal_tolerance: 0.3 #0.3 #0.1 #0.1 #3.14
   xy_goal_tolerance: 0.15 #0.15
 
 # Forward Simulation Parameters
   sim_time: 1.0 #3.0
-  vx_samples: 6
+  vx_samples: 3 #6
   vtheta_samples: 20
 
 # Trajectory Scoring Parameters
@@ -29,7 +31,7 @@ TrajectoryPlannerROS:
   dwa: false 
 
 # Oscillation Prevention Parameters
-  oscillation_reset_dist: 0.05
+  oscillation_reset_dist: 0.01 #0.05
 
 # Differential-drive robot configuration
   holonomic_robot: false
